--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
 		"@radix-ui/react-avatar": "^1.1.9",
 		"@radix-ui/react-dropdown-menu": "^2.1.14",
 		"@radix-ui/react-label": "^2.1.6",
+		"@radix-ui/react-popover": "^1.1.14",
 		"@radix-ui/react-select": "^2.2.4",
-		"@radix-ui/react-slot": "^1.2.2",
+		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tabs": "^1.1.11",
 		"@react-email/components": "^0.0.41",
 		"bcrypt": "^6.0.0",
@@ -33,6 +34,7 @@
 		"prisma": "^6.8.2",
 		"react": "^19.0.0",
 		"react-datepicker": "^8.3.0",
+		"react-day-picker": "^8.10.1",
 		"react-dom": "^19.0.0",
 		"resend": "^4.5.1",
 		"sonner": "^2.0.3",
@@ -48,6 +50,7 @@
 		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20",
 		"@types/react": "^19",
+		"@types/react-datepicker": "^6.2.0",
 		"@types/react-dom": "^19",
 		"@vitejs/plugin-react": "^4.4.1",
 		"@vitest/coverage-v8": "^3.1.3",
